--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Icon Library Browser</title>
-    <link rel="stylesheet" href="../src/bootstrap-icons/style.css">
+    <link rel="stylesheet" href="./../src/bootstrap-icons/style.css">
     <link rel="stylesheet" href="./css.css">
    <script src="./js.js"></script>
 </head>
