feat: add documentation page and header navigation link

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 <body>
     <div class="container">
         <div class="header">
+            <div class="header-nav">
+                <a href="./docs.html" class="docs-link">📚 Documentation</a>
+            </div>
             <h1>🎨 Icon Library Browser</h1>
             <p>Browse, Search, and Copy Icon Classes</p>
         </div>
