Update file structure in documentation for clarity and accuracy

--- a/public/docs.html
+++ b/public/docs.html
@@ -213,14 +213,10 @@
                     <p>Unzip the downloaded file to access the icon library contents. You should see files like:</p>
 
                     <div class="file-structure">
-                        bootstrap-icons-1.11.1/<br>
-                        ├── 📁 fonts/<br>
-                        │ ├── icomoon.eot<br>
-                        │ ├── icomoon.svg<br>
-                        │ ├── icomoon.ttf<br>
-                        │ └── icomoon.woff<br>
-                        ├── 📄 style.css<br>
-                        └── 📄 demo.html
+                            |── 📁 bootstrap-icons/<br>
+                            ├── 📁 fonts/<br>
+                            │   └── bootstrap.woff2<br>
+                            └── 📄 style.css<br>
                     </div>
                 </div>
 
@@ -235,14 +231,9 @@
                         │ ├── 📁 icons/<br>
                         │ │ ├── 📁 bootstrap-icons/<br>
                         │ │ │ ├── 📁 fonts/<br>
-                        │ │ │ │ ├── icomoon.eot<br>
-                        │ │ │ │ ├── icomoon.svg<br>
-                        │ │ │ │ ├── icomoon.ttf<br>
-                        │ │ │ │ └── icomoon.woff<br>
-                        │ │ │ ├── 📄 style.css<br>
-                        │ │ │ └── 📄 demo.html<br>
+                        │ │ │ │ └── bootstrap.woff2<br>
+                        │ │ │ └── 📄 style.css<br>
                         │ │ └── 📁 other-icon-libraries/<br>
-                        │ ├── 📄 index.html<br>
                         │ └── ...<br>
                     </div>
                 </div>
