Refactor code structure for improved readability and maintainability

--- a/public/docs.html
+++ b/public/docs.html
@@ -190,22 +190,17 @@
         </div>
 
         <div class="docs-section">
-            <h2>📦 How to Install Icon Libraries</h2>
+            <h2>📦 How to Download & Install Icon Libraries</h2>
 
             <div class="step-list">
                 <div class="step-item">
-                    <h3>Download the Icon Library</h3>
-                    <p>Click on the download link for your desired icon library:</p>
-
-                    <a href="https://github.com/twbs/icons/releases/latest/download/bootstrap-icons-1.11.1.zip"
-                        class="download-button" target="_blank">
-                        📥 Download Bootstrap Icons
-                    </a>
-
-                    <div class="info-box">
-                        <strong>Note:</strong> This example uses Bootstrap Icons. The process is similar for other icon
-                        libraries.
-                    </div>
+                    <h3>Download from Icon Library Browser</h3>
+                    <p>The easiest way to get icon libraries is directly from the browser:</p>
+                    <ul>
+                        <li>Browse available icon libraries on the main page</li>
+                        <li>Click the "📥 Download Library" button on any library card</li>
+                        <li>The ZIP file will be downloaded to your computer automatically</li>
+                    </ul>
                 </div>
 
                 <div class="step-item">
@@ -270,18 +265,27 @@
             <h2>🔧 How to Use the Icon Browser</h2>
 
             <h3>1. Browse Icon Libraries</h3>
-            <p>On the main page, you'll see available icon libraries. Click on any library card to browse its icons.</p>
+            <p>On the main page, you'll see available icon libraries. Each library card shows:</p>
+            <ul>
+                <li>Library name and description</li>
+                <li>Number of available icons</li>
+                <li>Download button for easy library installation</li>
+                <li>Browse button to explore icons</li>
+            </ul>
 
-            <h3>2. Search for Icons</h3>
+            <h3>2. Download Libraries</h3>
+            <p>Click the "📥 Download Library" button to download the complete icon library as a ZIP file. This includes all necessary CSS files and fonts.</p>
+
+            <h3>3. Search for Icons</h3>
             <p>Use the search box to find specific icons by name. The search is real-time and case-insensitive.</p>
 
-            <h3>3. Copy Icon Classes</h3>
+            <h3>4. Copy Icon Classes</h3>
             <p>Click the "📋 Copy Class" button to copy the icon's CSS class name to your clipboard.</p>
 
-            <h3>4. Generate Basic HTML</h3>
+            <h3>5. Generate Basic HTML</h3>
             <p>Click "🔧 Generate HTML" to copy ready-to-use HTML code for the icon.</p>
 
-            <h3>5. Create Styled Icons</h3>
+            <h3>6. Create Styled Icons</h3>
             <p>Click "🎨 Generate Styled" to open the customization modal where you can:</p>
             <ul>
                 <li>Adjust font size (10px - 500px)</li>
